# people_recognition

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  package.xml
.github/workflows/: main.yml
people_detection_3d/: CMakeLists.txt  README.md  package.xml  setup.py
people_detection_3d/scripts/: people_detection_3d_node
people_detection_3d/src/people_detection_3d/: __init__.py  people_detector_3d.py
people_detection_3d/test/assets/: 2019-05-03-12-42-25.bag  2019-05-03-12-42-34.bag
people_detection_3d_msgs/: CMakeLists.txt  README.md  package.xml
people_detection_3d_msgs/msg/: Person3D.msg
people_detection_3d_msgs/srv/: DetectPeople3D.srv
people_detection_3d_node/: setup.py
people_recognition/: CMakeLists.txt  README.md  package.xml
people_recognition_2d/: CMakeLists.txt  README.md  package.xml  setup.py
people_recognition_2d/scripts/: get_people_detections  get_people_detections_srv_test  get_people_recognition_2d  people_recognition_2d_node  people_recognition_2d_srv_test
people_recognition_2d/src/people_recognition_2d/: __init__.py  people_recognizer_2d.py
people_recognition_3d/: CMakeLists.txt  README.md  package.xml  setup.py
people_recognition_3d/config/: config.yaml
people_recognition_3d/scripts/: dummy_people_recognition_3d_node.py  people_recognition_3d_node
people_recognition_3d/src/people_recognition_3d/: __init__.py  people_recognizer_3d.py
people_recognition_3d/test/assets/: 2019-05-03-12-41-38.bag  2019-05-03-12-42-18.bag  2019-05-03-12-42-30.bag
people_recognition_face_recognition/: CMakeLists.txt  package.xml  setup.py
people_recognition_face_recognition/config/: rgbd_sensor_rgb_camera_params.yaml
people_recognition_face_recognition/launch/: face_recognition.launch
people_recognition_face_recognition/people_recognition_face_recognition/: face_recognizer.py
people_recognition_face_recognition/scripts/: face_recognition_node  get_face_recognition  train_from_images
people_recognition_face_recognition/src/people_recognition_face_recognition/models/: inception_resnet_v1.py  mtcnn.py
people_recognition_msgs/: CMakeLists.txt  package.xml
people_recognition_msgs/action/: TrackOperator.action
people_recognition_msgs/msg/: People3D.msg  Person2D.msg  Person3D.msg  RGBD.msg
people_recognition_msgs/srv/: RecognizePeople.srv  RecognizePeople2D.srv  RecognizePeople3D.srv
people_recognition_sim/: CMakeLists.txt  package.xml
people_recognition_sim/launch/: custom_world.launch  view_custom_world.launch
people_recognition_sim/worlds/: walk.world
people_recognition_tracking/: CMakeLists.txt  README.md  package.xml
people_recognition_tracking/include/people_recognition_tracking/: PeopleRecognitionTrackingRos.h  Tracking.h
people_recognition_tracking/src/: PeopleRecognitionTrackingRos.cpp  Tracking.cpp  node.cpp
people_tracking/: CMakeLists.txt  README.md  package.xml  setup.py  yolo.py
people_tracking/example/: example.launch  example_config.yaml
people_tracking/msg/: ColourCheckedTarget.msg  ColourTarget.msg  DetectedPerson.msg  FaceTarget.msg
people_tracking/scripts/: people_tracking_node
people_tracking/src/: UKFclass.py  colour_check.py  depth_image.py  face_detection.py  listener.py  people_tracker.cpp  people_tracker.py  person_detection.py  yolo.py
people_tracking/src/people_tracking/: __init__.py  colour_check.py  depth_image.py  face_detection.py  people_tracker.py  person_detection.py
people_tracking/srv/: Depth.srv
people_tracking/test/: people_tracking.launch  test_script+webcam.launch  test_with_webcam.launch  webcam.py
people_tracking/test/experiments/: depth_image.py  listener.py  people_tracker.cpp  skelly.py  test_script+webcam.launch  yolo.py
people_tracking_v2/: CMakeLists.txt  package.xml  setup.py
people_tracking_v2/data/Excel Fri Jun 28 Test case 4/: decision_data.csv
people_tracking_v2/msg/: BodySize.msg  BodySizeArray.msg  ComparisonScores.msg  ComparisonScoresArray.msg  DecisionResult.msg  Detection.msg  DetectionArray.msg  HoCVector.msg  HoCVectorArray.msg  SegmentedImages.msg
people_tracking_v2/operator_data/: latest_detection_1_data.npz  operator_data.npz
people_tracking_v2/scripts/: HoC.py  central_node.py  comparison_node.py  decision_node.py  memory_node.py  plotter.py  pose_estimation_node.py  publisher_node.py  subscriber_node.py  trial.py  yolo.py  yolo2.py  yolo_old.py  yolo_seg.py
people_tracking_v2/scripts/face_recognition/: face_recognition_node.py
people_tracking_v2/scripts/pose_estimation/: detect_poses.py  pose_estimation_node.py
people_tracking_v2/src/face_recognition/: face_recognizer.py
people_tracking_v2/src/people_tracking/: UKFclass.py  kalman_filter.py  webcam.py  yolo.py  yolo_pose_wrapper.py
people_tracking_v2/src/people_tracking/launchers/: ppl_tracking_v2.launch  save-HoC-data.launch  save_HoC_data.launch  save_pose_data.launch  yolo_launcher.launch
people_tracking_v2/src/pose_estimation/: yolo_pose_wrapper.py
people_tracking_v2/srv/: ProcessDetections.srv  ProcessImages.srv
people_tracking_v2/testing/: depth_publisher.py  depth_publisher_vid.py  frequency_measure.py  rgb_publisher.py  testing_HoC.py  testing_pose.py
people_tracking_v2/testing/launchers/: test_videos.launch  testing_HoC.launch  testing_pose.launch
people_tracking_v2/tools/: depth_converter.py  image2video.py  image2video_depth.py  plotter.py  realsense.launch  recorder.py  save_HoC_data.py  save_pose_data.py
people_tracking_v2/z_bep_plotter/: bep_plotter.py  hoc_plotter.py  performance_graph.py
people_tracking_v2/z_extras/: face_recognition_node.py  pose_estimation_node_old.py  yolo_depth.py
ppl/: CMakeLists.txt  package.xml
scripts/: get_people_detections  get_people_detections_srv_test  people_detection_3d_node  people_detection_node  people_detector
src/image_recognition_people_detector/: people_detector.py
src/people_detector_3d/: people_detector_3d.py
src/people_recognition_2d/: __init__.py
tracking_ws/devel/: .catkin  local_setup.sh
tracking_ws/src/people_tracking_v2/: CMakeLists.txt  package.xml  yolo.py
