<?xml version="1.0"?>
<package format="2">
  <name>people_detector_3d</name>
  <version>0.0.0</version>
  <description>The 3D People Detector package</description>

  <maintainer email="ar13pit@gmail.com">Arpit Aggarwal</maintainer>

  <license>MIT</license>

  <author email="ar13pit@gmail.com">Arpit Aggarwal</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>image_geometry</exec_depend>
  <exec_depend>image_recognition_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>tue_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
