<?xml version="1.0"?>
<package format="2">
  <name>people_detection_3d_msgs</name>
  <version>0.0.1</version>
  <description>The people_detection_3d_msgs package</description>

  <maintainer email="reinzor@gmail.com">Arpit Aggarwal</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>python-catkin-lint</build_depend>

  <build_depend>message_generation</build_depend>
  <depend>geometry_msgs</depend>
  <depend>image_recognition_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
