<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>people_recognition_2d</name>
  <version>0.0.1</version>
  <description>The people_recogniton_2d package</description>

  <maintainer email="ar13pit@gmail.com">Arpit Aggarwal</maintainer>

  <license>MIT</license>

  <url type="bugtracker">https://github.com/tue-robotics/people_recognition/issues</url>
  <url type="repository">https://github.com/tue-robotics/people_recognition/tree/master/people_recognition_2d</url>

  <author email="ar13pit@gmail.com">Arpit Aggarwal</author>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_recognition_msgs</depend>
  <depend>image_recognition_util</depend>
  <depend>people_recognition_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>

  <doc_depend condition="$ROS_PYTHON_VERSION == 2">python-sphinx</doc_depend>
  <doc_depend condition="$ROS_PYTHON_VERSION == 3">python3-sphinx</doc_depend>
  <doc_depend>python-sphinx-autoapi-pip</doc_depend>
  <doc_depend>python-sphinx-rtd-theme-pip</doc_depend>
  <doc_depend condition="$ROS_PYTHON_VERSION == 2">python-yaml</doc_depend>
  <doc_depend condition="$ROS_PYTHON_VERSION == 3">python3-yaml</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
