<?xml version="1.0"?>
<package format="2">
  <name>people_recognition_3d</name>
  <version>0.0.1</version>
  <description>The People Recognition 3D package</description>

  <maintainer email="ar13pit@gmail.com">Arpit Aggarwal</maintainer>

  <license>MIT</license>

  <author email="ar13pit@gmail.com">Arpit Aggarwal</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>image_geometry</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>people_recognition_2d</exec_depend>
  <exec_depend>people_recognition_msgs</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
