<?xml version="1.0"?>

<package format="2">
  <name>people_recognition_sim</name>
  <version>0.1.0</version>
  <description>People recognition gazebo models and plugins</description>

  <maintainer email="ar13pit@gmail.com">Arpit Aggarwal</maintainer>

  <license>BSD</license>

  <author email="ar13pit@gmail.com">Arpit Aggarwal</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/media"/>
  </export>
</package>
