<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>people_recognition_tracking</name>
  <version>0.0.1</version>
  <description>The People Recognition Tracking package</description>

  <maintainer email="ar13pit@gmail.com">Arpit Aggarwal</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/tue-robotics/people_recognition/issues</url>
  <url type="repository">https://github.com/tue-robotics/people_recognition/tree/master/people_recognition_tracking</url>

  <author email="ar13pit@gmail.com">Arpit Aggarwal</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>people_recognition_msgs</depend>
  <depend>people_recognition_3d</depend>
  <depend>roscpp</depend>

</package>
